--- a/src/writings/2018-06-29-anzac-day.md
+++ b/src/writings/2018-06-29-anzac-day.md
@@ -1,14 +1,19 @@
 ---
+layout: writing.njk
 title: ANZAC Day and being a Peace-Time Veteran
 date: 2018-06-29
-image: /img/wp-content/uploads/2021/07/1_LKDWlBW3k2urxj8OaM0qyA.jpeg
+category: lived-experience
+tags: [lived-experience, anzac, veterans]
+image: /assets/images/1_LKDWlBW3k2urxj8OaM0qyA.jpeg
 excerpt: This is a reflection on ANZAC Day and what it means to one female veteran who has served 16 years in the Royal Australian Air Force. ANZAC Day means different things to different people and this is just one person's opinion.
 ---
 
-![2016 Dawn Service North Beach](/img/wp-content/uploads/2021/07/nb-dawnservice.jpg)
+![2016 Dawn Service North Beach](/assets/images/nb-dawnservice.jpg)
 _North Beach RSL Sub-Branch Dawn Service. 2017. Photograph: Roslyn Whitney_
 
-_First published on [Medium.com](https://medium.com/@helenburgess/anzac-day-and-being-a-peace-time-veteran-542a46a4c0a8) Apr 17 2018_
+<div class="callout note">  
+<b>First published</b>  originally published on <a href="https://medium.com/@helenburgess/anzac-day-and-being-a-peace-time-veteran-542a46a4c0a8"> Medium.com,</a> Apr 17 2018
+</div>
 
 My name is Helen Burgess and I am a veteran, having served in the Royal Australian Air Force from 1984 until 2000. My service is during a time of peace where no major conflicts like we see today, so I have often had trouble reconciling myself to the label "Veteran".
 
@@ -54,7 +59,7 @@ There was a lot of tired men and women as the requirements for support went up, 
 
 Without the men and women of RAAF Base Darwin, 'holding the fort' so to speak; things could have been different for all involved. So even though I did not go over the sea to Timor I spent many months supporting those who did by ensuring facilities in and around Darwin worked.
 
-![RAAF Service Photo](/img/wp-content/uploads/2021/07/1_LKDWlBW3k2urxj8OaM0qyA.jpeg)
+![RAAF Service Photo](/assets/images/1_LKDWlBW3k2urxj8OaM0qyA.jpeg)
 
 ### Perceptions of Myself and ANZAC Day Now
 
