corrected paths to images in articles

--- a/src/writings/2018/06/2018-06-29-anzac-day.md
+++ b/src/writings/2018/06/2018-06-29-anzac-day.md
@@ -3,19 +3,18 @@ layout: layouts/writing.njk
 title: ANZAC Day and being a Peace-Time Veteran
 date: 2018-06-29
 calendar:
- status: published
- proposedDate: "2018-06-29"
- theme: "Technology and Society"
- keywords: [technology, society, anzac, veterans]
- type: "article"
+  status: published
+  proposedDate: "2018-06-29"
+  theme: "Technology and Society"
+  keywords: [technology, society, anzac, veterans]
+  type: "article"
 category: lived-experience
 tags: [lived-experience, anzac, veterans]
-image: /assets/images/1_LKDWlBW3k2urxj8OaM0qyA.jpeg
+image: /assets/images/other/1_LKDWlBW3k2urxj8OaM0qyA.jpeg
 excerpt: This is a reflection on ANZAC Day and what it means to one female veteran who has served 16 years in the Royal Australian Air Force. ANZAC Day means different things to different people and this is just one person's opinion.
-
 ---
 
-![2016 Dawn Service North Beach](/assets/images/nb-dawnservice.jpg)
+![2016 Dawn Service North Beach](/assets/images/other/nb-dawnservice.jpg)
 _North Beach RSL Sub-Branch Dawn Service. 2017. Photograph: Roslyn Whitney_
 
 <div class="callout note">  
@@ -66,7 +65,7 @@ There was a lot of tired men and women as the requirements for support went up, 
 
 Without the men and women of RAAF Base Darwin, 'holding the fort' so to speak; things could have been different for all involved. So even though I did not go over the sea to Timor I spent many months supporting those who did by ensuring facilities in and around Darwin worked.
 
-![RAAF Service Photo](/assets/images/1_LKDWlBW3k2urxj8OaM0qyA.jpeg)
+![painting of Helen Burgess for 'What is a Veteran?' project](/assets/images/other1_LKDWlBW3k2urxj8OaM0qyA.jpeg)
 
 ### Perceptions of Myself and ANZAC Day Now
 
