Update Writing “christmas”

--- a/src/writings/2025/12/2025-12-23-2025-12-23-a-quiet-christmas.md
+++ b/src/writings/2025/12/2025-12-23-2025-12-23-a-quiet-christmas.md
@@ -12,8 +12,13 @@ type: article
 tags:
   - lived-experience
 category: reflection
-image: /assets/images/placeholder_n9qtza.png
+image:
+  - mel-poole-LUPXhXj2ip0-unsplash.jpg
 image_alt: ''
+image_credit:
+  photographer: Mel Poole
+  username: '@melpoole'
+  photo_url: https://unsplash.com/photos/gift-boxes-with-red-baubles-on-top-LUPXhXj2ip0
 author:
   name: Helen Burgess
 socials:
